@@ -1,6 +1,8 @@
 Release 17.12
 Added <ClickThroughTransparent> for all widgets.
 Added ability to specify height and width and % of app dimentions or grid.
+Added optional <MonitorNumber> to application settings.  You can specify the monitor app launches on
+Added Alias of SCREEN_WIDTH and SCREEN_HEIGHT that you can use in widgets
 
 Release 17.11
 Added ability to monitory files used for DynamicImage widget.  If so configured, it will reload the image file if it changed.
